2000-03-31  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* backtrace.c (display_error_body), debug.c (scm_procedure_source,
	scm_reverse_lookup), dynl.c (scm_dynamic_link):  Don't use C
	operators to compare SCM values.

	* debug.c (scm_make_debugobj), debug.h (SCM_DEBUGOBJ_FRAME,
	SCM_SET_DEBUGOBJ_FRAME):  Update SCM_{SET_}?DEBUGOBJ_FRAME to
	access raw cell data with SCM_{SET_}?CELL_WORD_1.

	* debug.c (scm_make_debugobj):  Don't use SCM_SETCAR to set types.

	* debug.c (scm_make_memoized), dynl.c (scm_dynamic_link):  Smob
	data is of type scm_bits_t.

2000-03-31  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* gdbint.c (gdb_maybe_valid_type_p), guardians.c (TCONC_EMPTYP,
	scm_guardian_zombify):  Use SCM_EQ_P to compare SCM values.

	* guardians.c (GUARDIAN):  Use SCM_CELL_WORD_1 for raw data.

2000-03-31  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* ports.h (scm_port):  Change type of stream member to scm_bits_t.

	* gdbint.c (unmark_port, remark_port), ports.c (scm_markstream),
	strports.c (st_resize_port, scm_mkstrport), vports (sf_flush,
	sf_write, sf_fill_input, sf_close, scm_make_soft_port):  Since
	streams are now of type scm_bits_t, SCM streams have to be
	unpacked/packed.

	* ports.h (SCM_SETPTAB_ENTRY, SCM_SETSTREAM):  Cast input to
	scm_bits_t.

2000-03-31  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* coop-defs.h (struct coop_t): Added `sto'-field again because of
	binary compatibility---let's remove it next time we alter some
	major structure.

	* coop.c (coop_quitting_p, coop_cond_create, coop_mutex_create,
	coop_mother, coop_child): New variables.
	(mother): New function.
	(coop_create): New thread spawning mechanism which uses a "mother
	thread".  The "dummy" pthreads aren't healthy enough to give birth
	to new threads since Linux threads thinks they are asleep.

	* coop-defs.h (struct coop_t): Removed dummy_mutex.

	* coop-defs.h, coop-threads.c (struct coop_t): Eliminate
	`sto'-field when GUILE_PTHREAD_COMPAT is enabled.
